# ConanCMakeTest

./: .gitignore  CMakeLists.txt  build.sh  build_Debug.sh  build_Release.sh  conanfile.py  main.cpp
lib/: CMakeLists.txt
lib/include/: CustomizedWidget.h
lib/src/: Adder.cpp  CustomizedWidget.cpp
